--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,17 @@
+:root {
+    --main-color: rgb(4, 55, 75);
+}
 body {
     display: grid;
     grid-template-columns: 1fr 5fr;
     margin: 0%;
+    color: white;
 }
 
 .sidebar {
-    background-color: red;
+    background-color: var(--main-color);
 }
 
 .mainContent {
-    background-color: yellow;
+    border: 1px solid var(--main-color);
 }
