--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 body {
     display: grid;
     grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr;
     margin: 0%;
     color: white;
 }
@@ -14,4 +15,14 @@ body {
 
 .mainContent {
     border: 1px solid var(--main-color);
+}
+
+dialog {
+    max-width: 300px;
+}
+
+.taskData {
+    display: flex;
+    gap: 5%;
+    color: rebeccapurple;
 }
