--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
-    --main-color: rgb(4, 55, 75);
+    --main-color: rgb(0, 65, 119);
 }
 body {
     display: grid;
@@ -8,6 +10,9 @@ body {
     margin: 0%;
     color: white;
     min-height: 100vh;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sidebar {
@@ -16,8 +21,31 @@ body {
     padding: 10px;
 }
 
+.mainContent {
+    margin: 5%;
+}
+
 dialog {
-    max-width: 300px;
+    max-width: 250px;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 20px;
+    padding: 20px;
+}
+input, textarea {
+    border: none;
+    border-bottom: 1px solid #515151;
+    margin: 5%;
+}
+
+button {
+    border: none;
+    padding: 10px;
+    border-radius: 20px;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bolder;
+    max-height: 40px;
 }
 
 .taskData {
@@ -36,4 +64,5 @@ dialog {
     gap: 20px;
     align-items: center;
 }
+
 
