--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@
 }
 body {
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 4fr;
     grid-template-rows: 1fr;
     margin: 0%;
     color: white;
@@ -18,7 +18,25 @@ body {
 .sidebar {
     background-color: var(--main-color);
     /*display: none;*/
-    padding: 10px;
+    padding: 15px;
+}
+
+h3 {
+    border-bottom: 1px solid #979797;
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 80%;
+}
+
+#newProject {
+    border: 2px solid white;
+}
+
+#newProject:hover {
+    background-color: white;
+    border: var(--main-color);
+    color: var(--main-color);
+    box-shadow: rgba(255, 255, 255, 0.479) 0px 5px 10px;
 }
 
 .mainContent {
@@ -26,18 +44,29 @@ body {
 }
 
 dialog {
-    max-width: 250px;
+    max-width: 210px;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 20px;
     padding: 20px;
+}
+label {
+    margin-left: 5%;
+    color: #515151;
+}
+input[type = "date"] {
+    color: #515151;
 }
 input, textarea {
     border: none;
     border-bottom: 1px solid #515151;
     margin: 5%;
 }
-
+input:focus, textarea:focus{
+    border: none;
+    border-bottom: 1px solid #515151;
+    outline: none;
+}
 button {
     border: none;
     padding: 10px;
@@ -46,6 +75,7 @@ button {
     color: white;
     font-weight: bolder;
     max-height: 40px;
+    font-size: 18px;
 }
 
 .taskData {
