--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,7 @@ h3 {
 .mainContent {
     margin: 5%;
     margin-left: 0%;
+    color: #515151;
 }
 
 #newToDo {
@@ -103,5 +104,7 @@ button {
     color: var(--main-color);
     background-color: white;
 }
-
+.projectLi:focus {
+    color: yellow  ;
+}
 
