--- a/src/style.css
+++ b/src/style.css
@@ -25,6 +25,7 @@ h3 {
     border-bottom: 1px solid #979797;
     margin-left: 5%;
     margin-right: 5%;
+    padding-left: 5%;
     width: 80%;
 }
 
@@ -43,10 +44,10 @@ h3 {
     margin: 5%;
     margin-left: 0%;
     color: #515151;
-}
-
-.newToDo {
-    margin-left: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5%;
 }
 
 dialog {
@@ -112,6 +113,15 @@ button {
     color: yellow  ;
 }
 .projectTitle {
-    color: var(--main-color);
+    background-color: var(--main-color);
+    color: white;
+    font-size: 2rem;
+    font-weight: bolder;
+    box-shadow: var(--main-color) 0px 5px 15px;
+    border-radius: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    width: 50%;
 }
 
