--- a/src/style.css
+++ b/src/style.css
@@ -100,6 +100,7 @@ button {
     font-size: 1.5em;
     gap: 20px;
     align-items: center;
+    width: 50%;
 }
 .deleteProject:hover {
     color: var(--main-color);
