--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,20 @@ h3 {
     width: 80%;
 }
 
+h4 {
+    border: 2px solid white;
+    border-radius: 20px;
+    padding: 10px;
+    width: fit-content;
+}
+
+h4:hover {
+    background-color: white;
+    border: var(--main-color);
+    color: var(--main-color);
+    box-shadow: rgba(255, 255, 255, 0.315) 0px 5px 10px;
+}
+
 #newProject {
     border: 2px solid white;
 }
@@ -37,7 +51,7 @@ h3 {
     background-color: white;
     border: var(--main-color);
     color: var(--main-color);
-    box-shadow: rgba(255, 255, 255, 0.479) 0px 5px 10px;
+    box-shadow: rgba(255, 255, 255, 0.315) 0px 5px 10px;
 }
 
 .mainContent {
@@ -57,6 +71,7 @@ dialog {
     border-radius: 20px;
     padding: 20px;
 }
+
 label {
     margin-left: 5%;
     color: #515151;
@@ -122,6 +137,7 @@ button {
     border-radius: 20px;
     padding: 10px;
     display: flex;
+    justify-content: center;
     width: 50%;
 }
 
